fix(component): fix "no entries found" pagination control overlap
Fixes busybusy/webapp-busy-time#1219

--- a/app/styles/components/bc-list.scss
+++ b/app/styles/components/bc-list.scss
@@ -3,6 +3,7 @@ $image-size: 40px;
 
 .bc-list {
 	width: 100%;
+	min-height: 150px;
 
 	& > .bc-list-container {
 		width: 100%;
